--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
 </head>
 <body>
     <ul>
-        <li>piotrek</li>
         <li>aaa</li>
         <li>ppp</li>
         <li>zzz</li>
         <li>qqqq</li>
     </ul>
+    <div> A tutaj dodajemy coś nowego czego wcześniej nie było.</div>
 </body>
 </html>
