zmiana aaa na www

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <ul>
         <li>piotrek</li>
-        <li>aaa</li>
+        <li>www</li>
         <li>ppp</li>
         <li>zzz</li>
         <li>qqqq</li>
